--- a/servicioHotel.yml
+++ b/servicioHotel.yml
@@ -17,4 +17,4 @@ eureka:
     service-url:
       defaultzone: http://192.168.3.30:8761/eureka
   instance:
-    hostName: localhost
+    hostName: 192.168.3.30
