--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -4,3 +4,5 @@ eureka:
   client:
     service-url:
       defaultzone: http://192.168.3.30:8761/eureka
+  instance:
+    hostName: 192.168.3.30      
