--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 eureka:
   client:
-    service-url:
-      defaultzone: http://192.168.3.30:8761/eureka
+    serviceUrl:
+      defaultZone: http://192.168.3.30:8761/eureka
   instance:
     hostName: 192.168.3.30      
