--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -4,5 +4,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://192.168.3.30:8761/eureka
+    fetch-registry: false
+    register-with-eureka: false
   instance:
     hostName: 192.168.3.30      
