--- a/servicioHotel.yml
+++ b/servicioHotel.yml
@@ -18,3 +18,4 @@ eureka:
       defaultzone: http://192.168.3.30:8761/eureka
   instance:
     prefer-ip-address: true
+    preferIpAddress: 192.168.3.30
