--- a/servicioHotel.yml
+++ b/servicioHotel.yml
@@ -14,7 +14,7 @@ spring:
       matching-strategy: ant-path-matcher        
 eureka:
   client:
-    service-url: http://192.168.3.30:8761/eureka
+    service-url: 
       defaultzone: http://192.168.3.30:8761/eureka
   instance:
     prefer-ip-address: true
