--- a/servicioHotel.yml
+++ b/servicioHotel.yml
@@ -15,7 +15,7 @@ spring:
 eureka:
   client:
     service-url: 
-      defaultzone: http://192.168.3.30:8761/eureka
+      defaultzone: http://localhost:8761/eureka
   instance:
     prefer-ip-address: true
     preferIpAddress: 192.168.3.30
