--- a/servicioHotel.yml
+++ b/servicioHotel.yml
@@ -1,6 +1,6 @@
 eureka:
   client:
-    serviceUrl: http://192.168.3.30:8761/eureka
+    service-url: http://192.168.3.30:8761/eureka
 
 spring:
   datasource:
