--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -4,8 +4,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://192.168.3.30:8761/eureka
-    fetch-registry: true
-    register-with-eureka: true
+    fetch-registry: false
+    register-with-eureka: false
   instance:
     prefer-ip-address: true
 
