--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -2,6 +2,8 @@ server:
   port: 8761
 eureka:
   client:
+    serviceUrl:
+      defaultZone: http://192.168.3.30:8761/eureka
     fetch-registry: false
     register-with-eureka: false
   instance:
