--- a/servicioReservas.yml
+++ b/servicioReservas.yml
@@ -15,6 +15,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultzone: http://192.168.3.30:8761/eureka
+      defaultZone: http://192.168.3.30:8761/eureka
   instance:
     hostName: 192.168.3.30
